2009-03-30  Bob Halley  <halley@dnspython.org>

	* Add "one_rr_per_rrset" mode switch to methods which parse
	  messages from wire format (e.g. dns.message.from_wire(),
	  dns.query.udp(), dns.query.tcp()).  If set, each RR read is
	  placed in its own RRset (instead of being coalesced).

2009-03-30  Bob Halley  <halley@dnspython.org>

	* Added EDNS option support.

2008-10-16  Bob Halley  <halley@dnspython.org>

	* dns/rdtypes/ANY/DS.py: The from_text() parser for DS RRs did not
	  allow multiple Base64 chunks.  Thanks to Rakesh Banka for
	  finding this bug and submitting a patch.

2008-06-03  Bob Halley  <halley@dnspython.org>

	* dns/message.py (Message.set_rcode): The mask used preserved the
	  extended rcode, instead of everything else in ednsflags.

	* dns/message.py (Message.use_edns): ednsflags was not kept
	  coherent with the specified edns version.

2008-02-06  Bob Halley  <halley@dnspython.org>

	* dns/ipv6.py (inet_aton):  We could raise an exception other than
	  dns.exception.SyntaxError in some cases.

	* dns/tsig.py: Raise an exception when the peer has set a non-zero
	  TSIG error.

2007-11-25  Bob Halley  <halley@dnspython.org>

	* (Version 1.6.0 released)

2007-11-25  Bob Halley  <halley@dnspython.org>

	* dns/query.py (_wait_for): if select() raises an exception due to
	  EINTR, we should just select() again.

2007-06-13  Bob Halley  <halley@dnspython.org>

	* dns/inet.py: Added is_multicast().

	* dns/query.py (udp):  If the queried address is a multicast address, then
	  don't check that the address of the response is the same as the address
	  queried.

2007-05-24  Bob Halley  <halley@dnspython.org>

	* dns/rdtypes/IN/NAPTR.py: NAPTR comparisons didn't compare the
	  preference field due to a typo.

2007-02-07  Bob Halley  <halley@dnspython.org>

	* dns/resolver.py: Integrate code submitted by Paul Marks to
	  determine whether a Windows NIC is enabled.  The way dnspython
	  used to do this does not work on Windows Vista.
